--- a/helm/cluster-api/Chart.yaml
+++ b/helm/cluster-api/Chart.yaml
@@ -12,3 +12,4 @@ annotations:
     - catalog: default
       provider: azure
       team: celestial
+  config.giantswarm.io/version: "cluster-api-app"
