--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,8 +9,8 @@ workflows:
           context: "architect"
           # executor: "app-build-suite" # uncomment this if you want automatic metadata generation
           name: "package and push cluster-api chart"
-          app_catalog: "giantswarm-playground-catalog"
-          app_catalog_test: "giantswarm-playground-test-catalog"
+          app_catalog: "control-plane-catalog"
+          app_catalog_test: "control-plane-test-catalog"
           chart: "cluster-api"
           # Trigger job on git tag.
           filters:
