--- a/helm/cluster-api/templates/bootstrap/webhook.yaml
+++ b/helm/cluster-api/templates/bootstrap/webhook.yaml
@@ -2,7 +2,7 @@ apiVersion: admissionregistration.k8s.io/v1beta1
 kind: ValidatingWebhookConfiguration
 metadata:
   annotations:
-    cert-manager.io/inject-ca-from: {{ include "resource.default.namespace" . }}/{{ include "resource.bootstrap.name" . }}-cert
+    cert-manager.io/inject-ca-from: {{ include "resource.default.namespace" . }}/{{ include "resource.core.name" . }}-cert
   labels:
     {{- include "labels.common" . | nindent 4 }}
   name: {{ include "resource.bootstrap.name" . }}
