Mount right cert to controller containers

--- a/helm/cluster-api/templates/bootstrap/deployment.yaml
+++ b/helm/cluster-api/templates/bootstrap/deployment.yaml
@@ -75,4 +75,4 @@ spec:
         - name: cert
           secret:
             defaultMode: 420
-            secretName: {{ include "resource.bootstrap.name" . }}-cert
+            secretName: {{ include "resource.core.name" . }}-cert
