--- a/helm/cluster-api/templates/controlplane/deployment.yaml
+++ b/helm/cluster-api/templates/controlplane/deployment.yaml
@@ -65,4 +65,4 @@ spec:
         - name: cert
           secret:
             defaultMode: 420
-            secretName: {{ include "resource.controlplane.name" . }}-cert
+            secretName: {{ include "resource.core.name" . }}-cert
