--- a/helm/cluster-api/templates/controlplane/webhook.yaml
+++ b/helm/cluster-api/templates/controlplane/webhook.yaml
@@ -4,7 +4,7 @@ metadata:
   annotations:
     cert-manager.io/inject-ca-from: {{ include "resource.default.namespace" . }}/{{ include "resource.core.name" . }}-cert
   labels:
-    {{- include "labels.common" . | nindent 4 }}
+    {{- include "labels.common.controlplane" . | nindent 4 }}
   name: zzz-{{ include "resource.controlplane.name" . }}
 webhooks:
 - clientConfig:
@@ -38,7 +38,7 @@ metadata:
   annotations:
     cert-manager.io/inject-ca-from: {{ include "resource.default.namespace" . }}/{{ include "resource.controlplane.name" . }}-cert
   labels:
-    {{- include "labels.common" . | nindent 4 }}
+    {{- include "labels.common.controlplane" . | nindent 4 }}
   name: {{ include "resource.controlplane.name" . }}-webhook
 webhooks:
 - clientConfig:
