--- a/helm/cluster-api/templates/bootstrap/rbac.yaml
+++ b/helm/cluster-api/templates/bootstrap/rbac.yaml
@@ -3,7 +3,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   labels:
-    {{- include "labels.common" . | nindent 4 }}
+    {{- include "labels.common.bootstrap" . | nindent 4 }}
   name: {{ include "resource.bootstrap.name" . }}-leader-election
   namespace: {{ include "resource.default.namespace" . }}
 rules:
@@ -38,7 +38,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   labels:
-    {{- include "labels.common" . | nindent 4 }}
+    {{- include "labels.common.bootstrap" . | nindent 4 }}
   name: {{ include "resource.bootstrap.name" . }}-manager
 rules:
   - apiGroups:
@@ -267,7 +267,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   labels:
-    {{- include "labels.common" . | nindent 4 }}
+    {{- include "labels.common.bootstrap" . | nindent 4 }}
   name: {{ include "resource.bootstrap.name" . }}-leader-election
   namespace: {{ include "resource.default.namespace" . }}
 roleRef:
@@ -283,7 +283,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   labels:
-    {{- include "labels.common" . | nindent 4 }}
+    {{- include "labels.common.bootstrap" . | nindent 4 }}
   name: {{ include "resource.bootstrap.name" . }}-manager
 roleRef:
   apiGroup: rbac.authorization.k8s.io
