--- a/helm/cluster-api/templates/bootstrap/webhook.yaml
+++ b/helm/cluster-api/templates/bootstrap/webhook.yaml
@@ -4,7 +4,7 @@ metadata:
   annotations:
     cert-manager.io/inject-ca-from: {{ include "resource.default.namespace" . }}/{{ include "resource.core.name" . }}-cert
   labels:
-    {{- include "labels.common" . | nindent 4 }}
+    {{- include "labels.common.bootstrap" . | nindent 4 }}
   name: {{ include "resource.bootstrap.name" . }}
 webhooks:
 - clientConfig:
