--- a/helm/cluster-api/templates/controlplane/rbac.yaml
+++ b/helm/cluster-api/templates/controlplane/rbac.yaml
@@ -5,7 +5,7 @@ metadata:
     cluster.x-k8s.io/provider: control-plane-kubeadm
     clusterctl.cluster.x-k8s.io: ''
     kubeadm.controlplane.cluster.x-k8s.io/aggregate-to-manager: 'true'
-    {{- include "labels.common" . | nindent 4 }}
+    {{- include "labels.common.controlplane" . | nindent 4 }}
   name: {{ include "resource.controlplane.name" . }}-manager-role
 rules:
   - apiGroups:
@@ -235,7 +235,7 @@ metadata:
   labels:
     cluster.x-k8s.io/provider: control-plane-kubeadm
     clusterctl.cluster.x-k8s.io: ''
-    {{- include "labels.common" . | nindent 4 }}
+    {{- include "labels.common.controlplane" . | nindent 4 }}
   name: {{ include "resource.controlplane.name" . }}-manager-rolebinding
 roleRef:
   apiGroup: rbac.authorization.k8s.io
