--- a/helm/cluster-api/templates/core/clusterrolebinding.yaml
+++ b/helm/cluster-api/templates/core/clusterrolebinding.yaml
@@ -2,7 +2,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   labels:
-    {{- include "labels.common" . | nindent 4 }}
+    {{- include "labels.common.core" . | nindent 4 }}
   name: {{ include "resource.core.name" . }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
