--- a/helm/cluster-api/templates/core/serviceaccount.yaml
+++ b/helm/cluster-api/templates/core/serviceaccount.yaml
@@ -4,4 +4,4 @@ metadata:
   name: {{ include "resource.core.name" . }}
   namespace: {{ include "resource.default.namespace" . }}
   labels:
-    {{- include "labels.common" . | nindent 4 }}
+    {{- include "labels.common.core" . | nindent 4 }}
