--- a/helm/cluster-api/values.yaml
+++ b/helm/cluster-api/values.yaml
@@ -10,7 +10,7 @@ images:
     name: giantswarm/kubeadm-bootstrap-controller
   controlplane:
     name: giantswarm/kubeadm-control-plane-controller
-  tag: v0.4.1
+  tag: v1.1.0-gsalpha.2
 
 featuregates:
   machinepool: true
