--- a/helm/cluster-api/Chart.yaml
+++ b/helm/cluster-api/Chart.yaml
@@ -12,4 +12,4 @@ annotations:
     - catalog: default
       provider: azure
       team: celestial
-  config.giantswarm.io/version: 1.x.x
+  config.giantswarm.io/version: update-cluster-api-app
