--- a/helm/cluster-api/templates/bootstrap/webhook.yaml
+++ b/helm/cluster-api/templates/bootstrap/webhook.yaml
@@ -12,7 +12,7 @@ webhooks:
     service:
       name: {{ include "resource.bootstrap.name" . }}
       namespace: {{ include "resource.default.namespace" . }}
-      path: /validate-bootstrap-cluster-x-k8s-io-v1alpha4-kubeadmconfig
+      path: /validate-bootstrap-cluster-x-k8s-io-v1beta1-kubeadmconfig
       port: {{ .Values.ports.webhook }}
   failurePolicy: Fail
   matchPolicy: Equivalent
@@ -24,7 +24,7 @@ webhooks:
   - apiGroups:
     - bootstrap.cluster.x-k8s.io
     apiVersions:
-    - v1alpha4
+    - v1beta1
     operations:
     - CREATE
     - UPDATE
