Enable CAPI ClusterClass feature gate

--- a/helm/cluster-api/templates/controlplane/deployment.yaml
+++ b/helm/cluster-api/templates/controlplane/deployment.yaml
@@ -22,6 +22,7 @@ spec:
       containers:
       - args:
         - --metrics-bind-addr=0.0.0.0:{{ .Values.ports.metrics }}
+        - --feature-gates=ClusterTopology={{ .Values.featuregates.clustertopology }}
         - --watch-filter={{ .Values.watchfilter }}
         - --webhook-port={{ .Values.ports.webhook }}
         command:
