--- a/helm/cluster-api/templates/admissionregistration.k8s.io_v1_mutatingwebhookconfiguration_zzz-capi-kubeadm-control-plane-mutating-webhook-configuration.yaml
+++ b/helm/cluster-api/templates/admissionregistration.k8s.io_v1_mutatingwebhookconfiguration_zzz-capi-kubeadm-control-plane-mutating-webhook-configuration.yaml
@@ -8,10 +8,10 @@ metadata:
     app.giantswarm.io/commit: '{{ .Values.project.commit }}'
     app.kubernetes.io/instance: '{{ .Release.Name }}'
     app.kubernetes.io/managed-by: '{{ .Release.Service }}'
-    app.kubernetes.io/name: cluster-api-provider-azure
+    app.kubernetes.io/name: cluster-api
     app.kubernetes.io/version: '{{ .Chart.AppVersion }}'
     cluster.x-k8s.io/provider: control-plane-kubeadm
-    helm.sh/chart: cluster-api-provider-azure
+    helm.sh/chart: cluster-api
   name: zzz-capi-kubeadm-control-plane-mutating-webhook-configuration
 webhooks:
 - admissionReviewVersions:
