--- a/helm/cluster-api/templates/cert-manager.io_v1_certificate_capi-kubeadm-bootstrap-serving-cert.yaml
+++ b/helm/cluster-api/templates/cert-manager.io_v1_certificate_capi-kubeadm-bootstrap-serving-cert.yaml
@@ -6,10 +6,10 @@ metadata:
     app.giantswarm.io/commit: '{{ .Values.project.commit }}'
     app.kubernetes.io/instance: '{{ .Release.Name }}'
     app.kubernetes.io/managed-by: '{{ .Release.Service }}'
-    app.kubernetes.io/name: cluster-api-provider-azure
+    app.kubernetes.io/name: cluster-api
     app.kubernetes.io/version: '{{ .Chart.AppVersion }}'
     cluster.x-k8s.io/provider: bootstrap-kubeadm
-    helm.sh/chart: cluster-api-provider-azure
+    helm.sh/chart: cluster-api
   name: capi-kubeadm-bootstrap-serving-cert
   namespace: '{{ .Release.Namespace }}'
 spec:
