--- a/helm/cluster-api/templates/rbac.authorization.k8s.io_v1_clusterrole_capi-manager-role.yaml
+++ b/helm/cluster-api/templates/rbac.authorization.k8s.io_v1_clusterrole_capi-manager-role.yaml
@@ -6,11 +6,11 @@ metadata:
     app.giantswarm.io/commit: '{{ .Values.project.commit }}'
     app.kubernetes.io/instance: '{{ .Release.Name }}'
     app.kubernetes.io/managed-by: '{{ .Release.Service }}'
-    app.kubernetes.io/name: cluster-api-provider-azure
+    app.kubernetes.io/name: cluster-api
     app.kubernetes.io/version: '{{ .Chart.AppVersion }}'
     cluster.x-k8s.io/aggregate-to-manager: "true"
     cluster.x-k8s.io/provider: cluster-api
-    helm.sh/chart: cluster-api-provider-azure
+    helm.sh/chart: cluster-api
   name: capi-manager-role
 rules:
 - apiGroups:
