--- a/helm/cluster-api/templates/v1_serviceaccount_capi-kubeadm-control-plane-manager.yaml
+++ b/helm/cluster-api/templates/v1_serviceaccount_capi-kubeadm-control-plane-manager.yaml
@@ -6,9 +6,9 @@ metadata:
     app.giantswarm.io/commit: '{{ .Values.project.commit }}'
     app.kubernetes.io/instance: '{{ .Release.Name }}'
     app.kubernetes.io/managed-by: '{{ .Release.Service }}'
-    app.kubernetes.io/name: cluster-api-provider-azure
+    app.kubernetes.io/name: cluster-api
     app.kubernetes.io/version: '{{ .Chart.AppVersion }}'
     cluster.x-k8s.io/provider: control-plane-kubeadm
-    helm.sh/chart: cluster-api-provider-azure
+    helm.sh/chart: cluster-api
   name: capi-kubeadm-control-plane-manager
   namespace: '{{ .Release.Namespace }}'
