Manifest generation for CAPI v0.3.x, with CRDs

--- a/config/helm/webhook-watchfilter.yaml
+++ b/config/helm/webhook-watchfilter.yaml
@@ -1,14 +1,10 @@
 ---
-apiVersion: admissionregistration.k8s.io/v1
+apiVersion: admissionregistration.k8s.io/v1beta1
 kind: MutatingWebhookConfiguration
 metadata:
   name: capi-mutating-webhook-configuration
 webhooks:
   - name: default.cluster.cluster.x-k8s.io
-    objectSelector:
-      matchLabels:
-        cluster.x-k8s.io/watch-filter: capi
-  - name: default.clusterclass.cluster.x-k8s.io
     objectSelector:
       matchLabels:
         cluster.x-k8s.io/watch-filter: capi
@@ -28,7 +24,7 @@ webhooks:
     objectSelector:
       matchLabels:
         cluster.x-k8s.io/watch-filter: capi
-  - name: default.machinepool.cluster.x-k8s.io
+  - name: default.exp.machinepool.cluster.x-k8s.io
     objectSelector:
       matchLabels:
         cluster.x-k8s.io/watch-filter: capi
@@ -37,16 +33,12 @@ webhooks:
       matchLabels:
         cluster.x-k8s.io/watch-filter: capi
 ---
-apiVersion: admissionregistration.k8s.io/v1
+apiVersion: admissionregistration.k8s.io/v1beta1
 kind: ValidatingWebhookConfiguration
 metadata:
   name: capi-validating-webhook-configuration
 webhooks:
   - name: validation.cluster.cluster.x-k8s.io
-    objectSelector:
-      matchLabels:
-        cluster.x-k8s.io/watch-filter: capi
-  - name: validation.clusterclass.cluster.x-k8s.io
     objectSelector:
       matchLabels:
         cluster.x-k8s.io/watch-filter: capi
@@ -66,7 +58,7 @@ webhooks:
     objectSelector:
       matchLabels:
         cluster.x-k8s.io/watch-filter: capi
-  - name: validation.machinepool.cluster.x-k8s.io
+  - name: validation.exp.machinepool.cluster.x-k8s.io
     objectSelector:
       matchLabels:
         cluster.x-k8s.io/watch-filter: capi
@@ -75,7 +67,7 @@ webhooks:
       matchLabels:
         cluster.x-k8s.io/watch-filter: capi
 ---
-apiVersion: admissionregistration.k8s.io/v1
+apiVersion: admissionregistration.k8s.io/v1beta1
 kind: MutatingWebhookConfiguration
 metadata:
   name: capi-kubeadm-control-plane-mutating-webhook-configuration
@@ -89,7 +81,7 @@ webhooks:
       matchLabels:
         cluster.x-k8s.io/watch-filter: capi
 ---
-apiVersion: admissionregistration.k8s.io/v1
+apiVersion: admissionregistration.k8s.io/v1beta1
 kind: ValidatingWebhookConfiguration
 metadata:
   name: capi-kubeadm-control-plane-validating-webhook-configuration
@@ -103,7 +95,7 @@ webhooks:
       matchLabels:
         cluster.x-k8s.io/watch-filter: capi
 ---
-apiVersion: admissionregistration.k8s.io/v1
+apiVersion: admissionregistration.k8s.io/v1beta1
 kind: ValidatingWebhookConfiguration
 metadata:
   name: capi-kubeadm-bootstrap-validating-webhook-configuration
