--- a/config/helm/certificate.yaml
+++ b/config/helm/certificate.yaml
@@ -1,9 +1,9 @@
 ---
-apiVersion: cert-manager.io/v1
+apiVersion: cert-manager.io/v1alpha2
 kind: Certificate
 metadata:
   name: capi-serving-cert
-  namespace: capi-system
+  namespace: capi-webhook-system
 spec:
   dnsNames:
   - capi-webhook-service.{{ .Release.Namespace }}.svc
@@ -14,11 +14,11 @@ spec:
     name: selfsigned-giantswarm
   secretName: capi-webhook-service-cert
 ---
-apiVersion: cert-manager.io/v1
+apiVersion: cert-manager.io/v1alpha2
 kind: Certificate
 metadata:
   name: capi-kubeadm-control-plane-serving-cert
-  namespace: capi-kubeadm-control-plane-system
+  namespace: capi-webhook-system
 spec:
   dnsNames:
   - capi-kubeadm-control-plane-webhook-service.{{ .Release.Namespace }}.svc
@@ -29,11 +29,11 @@ spec:
     name: selfsigned-giantswarm
   secretName: capi-kubeadm-control-plane-webhook-service-cert
 ---
-apiVersion: cert-manager.io/v1
+apiVersion: cert-manager.io/v1alpha2
 kind: Certificate
 metadata:
   name: capi-kubeadm-bootstrap-serving-cert
-  namespace: capi-kubeadm-bootstrap-system
+  namespace: capi-webhook-system
 spec:
   dnsNames:
   - capi-kubeadm-bootstrap-webhook-service.{{ .Release.Namespace }}.svc
