--- a/config/helm/deployment-args.yaml
+++ b/config/helm/deployment-args.yaml
@@ -3,7 +3,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: capi-controller-manager
-  namespace: capi-system
+  namespace: capi-webhook-system
 spec:
   template:
     spec:
@@ -11,6 +11,7 @@ spec:
         - name: manager
           args:
             - --metrics-bind-addr=0.0.0.0:8080
+            - --webhook-port=9443
             - --feature-gates=MachinePool=true,ClusterResourceSet=true,ClusterTopology=true
             - --watch-filter=capi
             - --v=0
@@ -19,7 +20,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: capi-kubeadm-bootstrap-controller-manager
-  namespace: capi-kubeadm-bootstrap-system
+  namespace: capi-webhook-system
 spec:
   template:
     spec:
@@ -27,16 +28,16 @@ spec:
         - name: manager
           args:
             - --metrics-bind-addr=0.0.0.0:8080
+            - --webhook-port=9443
             - --feature-gates=MachinePool=true
             - --watch-filter=capi
             - --v=0
-
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: capi-kubeadm-control-plane-controller-manager
-  namespace: capi-kubeadm-control-plane-system
+  namespace: capi-webhook-system
 spec:
   template:
     spec:
@@ -44,6 +45,7 @@ spec:
         - name: manager
           args:
             - --metrics-bind-addr=0.0.0.0:8080
+            - --webhook-port=9443
             - --feature-gates=ClusterTopology=true
             - --watch-filter=capi
             - --v=0
