--- a/config/helm/deployment-metrics-port.yaml
+++ b/config/helm/deployment-metrics-port.yaml
@@ -3,7 +3,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: capi-controller-manager
-  namespace: capi-system
+  namespace: capi-webhook-system
 spec:
   template:
     spec:
@@ -18,7 +18,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: capi-kubeadm-bootstrap-controller-manager
-  namespace: capi-kubeadm-bootstrap-system
+  namespace: capi-webhook-system
 spec:
   template:
     spec:
@@ -33,7 +33,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: capi-kubeadm-control-plane-controller-manager
-  namespace: capi-kubeadm-control-plane-system
+  namespace: capi-webhook-system
 spec:
   template:
     spec:
