--- a/config/helm/kustomization.yaml
+++ b/config/helm/kustomization.yaml
@@ -1,7 +1,7 @@
 namespace: '{{ .Release.Namespace }}'
 
 resources:
-  - https://github.com/kubernetes-sigs/cluster-api/releases/download/v1.0.2/cluster-api-components.yaml
+  - https://github.com/kubernetes-sigs/cluster-api/releases/download/v0.3.22/cluster-api-components.yaml
 
 images:
   - name: k8s.gcr.io/cluster-api/cluster-api-controller
@@ -20,11 +20,15 @@ transformers:
   - webhook-prefix.yaml
 
 patchesStrategicMerge:
+  - delete-namespaces.yaml
+  - delete-deployments.yaml
+  - delete-metrics-services.yaml
+  - delete-issuers.yaml
+  - delete-rbac-proxy.yaml
+  - delete-leader-election.yaml
+  - delete-aggregated-roles.yaml
   - deployment-args.yaml
   - deployment-metrics-port.yaml
-  - delete-capi-system-ns.yaml
-  - delete-capi-kubeadm-control-plane-system-ns.yaml
-  - delete-capi-kubeadm-bootstrap-system-ns.yaml
   - webhook-watchfilter.yaml
   - webhook-certificate.yaml
   - service-add-metrics-port.yaml
