--- a/config/helm/service-add-metrics-port.yaml
+++ b/config/helm/service-add-metrics-port.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  namespace: capi-system
+  namespace: capi-webhook-system
   name: capi-webhook-service
 spec:
   ports:
@@ -16,7 +16,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  namespace: capi-kubeadm-control-plane-system
+  namespace: capi-webhook-system
   name: capi-kubeadm-control-plane-webhook-service
 spec:
   ports:
@@ -30,7 +30,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  namespace: capi-kubeadm-bootstrap-system
+  namespace: capi-webhook-system
   name: capi-kubeadm-bootstrap-webhook-service
 spec:
   ports:
